responsive de el index y el login 2

--- a/html/login2.html
+++ b/html/login2.html
@@ -10,7 +10,9 @@
 <body>
 
     <div class="contenedor-principal">
-        <img src="https://media1.thehungryjpeg.com/thumbs2/ori_4196586_u1ef5zt22urfp1n3y205nl70adknmbz4ckq1fi9p_golems-lava-esport-mascot-logo-design.png" alt="logo">
+        <div>
+            <img src="https://media1.thehungryjpeg.com/thumbs2/ori_4196586_u1ef5zt22urfp1n3y205nl70adknmbz4ckq1fi9p_golems-lava-esport-mascot-logo-design.png" alt="logo">
+        </div>
         <div class="contenedor-formulario">
             <!-- botones superiores -->
             <div class="botones">
