pequños cambios login 2

--- a/html/login6.html
+++ b/html/login6.html
@@ -11,7 +11,7 @@
         <div class="contenedor-formulario ">
 
             <div class="register-formulario">
-                <h1 class="cambio">Registro</h1>
+                <h1 class="cambio-register">Registro</h1>
                 <form action="">
                     <input type="text" placeholder="Nombre">
                     <input type="email" placeholder="Email">
@@ -21,7 +21,7 @@
             </div>
 
             <div class="login-formulario">
-                <h1 class="letra-pequeña">Ingreso</h1>
+                <h1 class="cambio-login letra-pequeña">Ingreso</h1>
                 <form action="">
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Contraseña">
